[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "windowsget"
version = "0.0.9"
description = "windowsget is a Python-based command-line interface (CLI) utility that can be used to download files from the internet on Windows operating system."
authors = [
    {name = "SUNNY BHAVEEN CHANDRA", email = "sunny.c17hawke@gmail.com"},
]
dependencies = ["requests==2.28.2"]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
[project.optional-dependencies]
testing = [
    "black>=22.8.0",
    "flake8>=5.0.4",
    "mypy>=0.971",
    "pytest>=7.1.3",
    "tox>=3.25.1",
]
[project.scripts]
windowsget = "windowsget.cli:main"

[tool.pytest.ini_options]
testpaths = [
    "tests"
    ]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
[tool.pdm]
package-dir = "src"
